# here-by-headout

./: .gitignore  Hackin 2026 - Experiences Launchpad.html  Hackin 2026 - Experiences Launchpad.md  Headout Here - GTM Plan.md  Headout Here - Hackin 2026 Master.html  Headout Here - Hackin 2026 Master.md  Headout Here - Master Handoff.md  architecture.html  demo.html  fal-trailer-prompts-partner.md  flow-trailer-prompts-partner.md  flow-trailer-prompts.md  index.html  trailer-guest.html  trailer-partner.html
backend/: HOSTING.md  LOCAL_DEV.md  MASTER_PLAN.md
demo/: Dockerfile  README.md  fly.toml
demo/backend/: .env.example  .gitignore  ARCHITECTURE.md  HOSTING.md  LOCAL_DEV.md  MASTER_PLAN.md  TESTING.md  pyproject.toml
demo/backend/app/: __init__.py  config.py  db.py  events_bus.py  main.py  models.py  repo.py  schemas.py  seed.py  utils.py
demo/backend/app/routers/: analytics.py  bookings.py  places.py  posters.py  stream.py  tracking.py
demo/backend/app/services/: posters.py  qr.py
demo/backend/tests/: conftest.py  test_analytics.py  test_bookings.py  test_health.py  test_places.py  test_posters.py  test_stream.py  test_tracking.py
demo/backend/tests/unit/: test_helpers.py
designs/: index.html
designs/assets/: eevee.css  halyard.css  partner-motion.css  partner-motion.js
designs/foundations/: index.html
designs/guest-flow/: 01-map-storefront.html
designs/partner-flow/: 00-landing.html  01-place-setup.html  02-generated-output.html  03-partner-dashboard.html  (+1 more)
scripts/: build-master-html.mjs  build-trailers-html.mjs  md-to-html.mjs
(+2 files in other folders)
