[project]
name = "here-by-headout"
version = "0.1.0"
description = "HERE by Headout — partner-flow backend (FastAPI + SQLite + SSE)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "segno>=1.6",
    "pillow>=10.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "anyio>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "unit: pure-function tests with no app/db (fast)",
    "integration: exercises the running ASGI app",
]

[tool.uv]
package = false
